--- a/src/main/resources/templates/systemmanagement/medical_room.html
+++ b/src/main/resources/templates/systemmanagement/medical_room.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>卫生室用户管理</title>
-    <script src="layui/layui.js"></script>
     <link rel="stylesheet" href="layui/css/layui.css">
-    <script>
+    <script src="layui/layui.js"></script>
+    <script src="js/jQuery/jquery-2.2.3.min.js"></script>
+    <!--<script>
         layui.use(['laypage', 'layer'], function() {
             var laypage = layui.laypage;
             layer = layui.layer;
@@ -16,7 +17,8 @@
                 , theme: '#1E9FFF'
             });
         })
-    </script>
+    </script>-->
+    <script src="js/systemmanagement/js/pagelist.js"></script>
     <style>
         body{
             padding: 0;
@@ -44,118 +46,193 @@
                 <li><div class="layui-form-item">
                     <label class="layui-form-label">ID</label>
                     <div class="layui-input-block">
-                        <input type="text" name="title"  placeholder="请输入ID" class="layui-input" style="width: 200px">
+                        <input type="text" name="userId" id = "userId" placeholder="请输入ID" class="layui-input" style="width: 200px">
                     </div>
                 </div></li>
                 <li><div class="layui-form-item">
                     <label class="layui-form-label">用户名称</label>
                     <div class="layui-input-block">
-                        <input type="text" name="title"  placeholder="请输入用户名称" class="layui-input" style="width: 200px">
+                        <input type="text" name="userAccount" id="userAccount" placeholder="请输入用户名称" class="layui-input" style="width: 200px">
                     </div>
                 </div></li>
                 <li><div class="layui-form-item">
-                    <label class="layui-form-label">所在单位</label>
+                    <label class="layui-form-label">联系地址</label>
                     <div class="layui-input-block">
-                        <input type="text" name="title"  placeholder="请输入所在单位" class="layui-input" style="width: 200px">
+                        <input type="text" name="contactAddress" id="contactAddress"  placeholder="请输入联系地址" class="layui-input" style="width: 200px">
                     </div>
                 </div></li>
             </ul>
         </form>
-        <button class="layui-btn layui-btn-normal layui-btn-lg" id="find">查询</button>
+        <button class="layui-btn layui-btn-normal layui-btn-lg" id="find" onclick="readList()">查询</button>
     </div>
     <div class="healthBureau_ops layui-btn-group">
-        <button class="layui-btn layui-btn-normal layui-btn-lg">添加</button>
-        <button class="layui-btn layui-btn-normal layui-btn-lg">导出</button>
-        <button class="layui-btn layui-btn-normal layui-btn-lg">导入</button>
+        <button class="layui-btn layui-btn-normal layui-btn-lg" onclick="addInformation()">添加</button>
+        <button class="layui-btn layui-btn-normal layui-btn-lg" id="downloadFile" onclick="downExcel()">导出</button>
+        <button class="layui-btn layui-btn-normal layui-btn-lg" id="uploadFile">导入</button>
     </div>
     <div>
         <table class="layui-table">
-            <colgroup>
+            <!--<colgroup>
                 <col width="150">
                 <col width="200">
                 <col>
-            </colgroup>
+            </colgroup>-->
             <thead>
             <tr>
-                <th>ID</th>
+                <th type="checkbox"></th>
+                <th>用户名</th>
+                <th>用户类别</th>
                 <th>用户账号</th>
-                <th>用户名称</th>
-                <th>用户角色</th>
-                <th>所在单位</th>
+                <th>单位名称</th>
                 <th>联系地址</th>
                 <th>邮政编码</th>
+                <th>联系人</th>
                 <th>联系方式</th>
                 <th>邮箱</th>
-                <th>查看</th>
+                <!-- <th>查看</th>-->
                 <th>修改</th>
                 <th>删除</th>
             </tr>
             </thead>
-            <tbody>
-            <tr>
-                <td>0000</td>
-                <td>wangwu</td>
-                <td>王五</td>
-                <td>卫生室内</td>
-                <td>海康医疗</td>
-                <td>西安市</td>
-                <td>100100</td>
-                <td>15632321547</td>
-                <td>2569322326@qq.com</td>
-                <td style="color: #1E9FFF" href="">查看</td>
-                <td style="color: #1E9FFF">修改</td>
-                <td style="color: #1E9FFF">删除</td>
-            </tr>
-            <tr>
-                <td>0000</td>
-                <td>wangwu</td>
-                <td>王五</td>
-                <td>卫生室内</td>
-                <td>海康医疗</td>
-                <td>西安市</td>
-                <td>100100</td>
-                <td>15632321547</td>
-                <td>2569322326@qq.com</td>
-                <td style="color: #1E9FFF" href="">查看</td>
-                <td style="color: #1E9FFF">修改</td>
-                <td style="color: #1E9FFF">删除</td>
-            </tr>
-            <tr>
-                <td>0000</td>
-                <td>wangwu</td>
-                <td>王五</td>
-                <td>卫生室内</td>
-                <td>海康医疗</td>
-                <td>西安市</td>
-                <td>100100</td>
-                <td>15632321547</td>
-                <td>2569322326@qq.com</td>
-                <td style="color: #1E9FFF" href="">查看</td>
-                <td style="color: #1E9FFF">修改</td>
-                <td style="color: #1E9FFF">删除</td>
-            </tr>
+            <tbody id="tbody">
+
             </tbody>
         </table>
     </div>
-    <!--<div id="show-bottom" style="height:1.875rem;">
-        <span>第${pageInfo.pageNum}页/共${pageInfo.pages}页</span>
-        <a href="users?pageNum=0">首页</a>
-        <c:if test="${pageInfo.hasPreviousPage}">
-            <a href="users?pageNum=${pageInfo.pageNum-1}">上一页</a>
-        </c:if>
-        <c:if test="${pageInfo.hasNextPage}">
-            <a href="users?pageNum=${pageInfo.pageNum+1}">下一页</a>
-        </c:if>
-        <a href="users?pageNum=${pageInfo.pages}">尾页</a>
-    </div>-->
     <fieldset class="layui-elem-field layui-field-title" style="margin-top: 30px;">
         <!--  <legend>自定义主题 - 颜色随意定义</legend>-->
     </fieldset>
-
     <div id="demo2"></div>
-    <!-- <div id="demo2-1"></div>
-     <div id="demo2-2"></div>-->
-
+    <!-- 添加表单-->
+    <form class="" id="form_add" style="display: none" >
+        <br>
+        <table lay-even lay-skin="line" lay-size="lg">
+            <tr class="layui-form-item">
+                <td><label class="layui-form-label">用户名称</label></td>
+                <td class="layui-input-block"><input class="layui-input" type="text" name="title"></td>
+                <td><label class="layui-form-label">用户账号</label></td>
+                <td class="layui-input-block"><input  class="layui-input" type="text" name="title" placeholder="8-16位数字加字母"></td>
+            </tr>
+            <tr class="layui-form-item">
+                <td><label class="layui-form-label">用户密码</label></td>
+                <td class="layui-input-block"><input class="layui-input" type="text" name="title" placeholder="8-16位数字加字母特殊符号"></td>
+                <td><label class="layui-form-label">加密盐值</label></td>
+                <td class="layui-input-block"><input class="layui-input" type="text" name="title" ></td>
+            </tr>
+            <tr class="layui-form-item">
+                <td><label class="layui-form-label">用户状态</label></td>
+                <td class="layui-input-block">
+                    <select lay-verify="required">
+                        <option value="0">请选择</option>
+                        <option value="1">正常</option>
+                        <option value="2">删除</option>
+                    </select>
+                </td>
+                <td><label class="layui-form-label">所在单位</label></td>
+                <td class="layui-input-block"><input class="layui-input" type="text" name="title" ></td>
+            </tr>
+            <tr class="layui-form-item">
+                <td><label class="layui-form-label">联系地址</label></td>
+                <td class="layui-input-block">
+                    <select lay-verify="required">
+                        <option value="0">请选择</option>
+                        <option value="1">北京</option>
+                    </select>
+                    <select lay-verify="required">
+                        <option value="0">请选择</option>
+                        <option value="1">北京市</option>
+                    </select>
+                    <select  lay-verify="required">
+                        <option value="0">请选择</option>
+                        <option value="1">海淀区</option>
+                    </select>
+                </td>
+                <td><label class="layui-form-label">详细地址</label></td>
+                <td class="layui-input-block"><input class="layui-input" type="text" name="title" placeholder="如道路 门牌号 小区 楼栋号 单元室等"></td>
+            </tr>
+            <tr class="layui-form-item">
+                <td><label class="layui-form-label">邮政编码</label></td>
+                <td class="layui-input-block"><input class="layui-input" type="text" name="title" ></td>
+                <td><label class="layui-form-label">联系人</label></td>
+                <td class="layui-input-block"><input  class="layui-input" type="text" name="title" ></td>
+            </tr>
+            <tr class="layui-form-item">
+                <td><label class="layui-form-label">联系电话</label></td>
+                <td class="layui-input-block"><input placeholder="只能以13、15、18开头" class="layui-input" type="text" name="title" ></td>
+                <td><label class="layui-form-label">邮箱</label></td>
+                <td class="layui-input-block"><input placeholder="8-16位数字+@163.com" class="layui-input" type="text" name="title" ></td>
+            </tr>
+        </table>
+        <div class="modal-footer">
+            <button class="layui-btn layui-btn-normal" style="float: left;margin-left:100px">提交</button>
+            <button class="layui-btn layui-btn-normal" style="float: right;margin-right:100px">取消</button>
+        </div>
+    </form>
+    <!-- 修改表单-->
+    <form class="" id="edit_add" style="display: none" >
+        <br>
+        <table lay-even lay-skin="line" lay-size="lg">
+            <tr class="layui-form-item">
+                <td><label class="layui-form-label">用户名称</label></td>
+                <td class="layui-input-block"><input class="layui-input" type="text" name="title"></td>
+                <td><label class="layui-form-label">用户账号</label></td>
+                <td class="layui-input-block"><input  class="layui-input" type="text" name="title" placeholder="8-16位数字加字母"></td>
+            </tr>
+            <tr class="layui-form-item">
+                <td><label class="layui-form-label">用户密码</label></td>
+                <td class="layui-input-block"><input class="layui-input" type="text" name="title" placeholder="8-16位数字加字母特殊符号"></td>
+                <td><label class="layui-form-label">加密盐值</label></td>
+                <td class="layui-input-block"><input class="layui-input" type="text" name="title" ></td>
+            </tr>
+            <tr class="layui-form-item">
+                <td><label class="layui-form-label">用户状态</label></td>
+                <td class="layui-input-block">
+                    <select lay-verify="required">
+                        <option value="0">请选择</option>
+                        <option value="1">正常</option>
+                        <option value="2">删除</option>
+                    </select>
+                </td>
+                <td><label class="layui-form-label">所在单位</label></td>
+                <td class="layui-input-block"><input class="layui-input" type="text" name="title" ></td>
+            </tr>
+            <tr class="layui-form-item">
+                <td><label class="layui-form-label">联系地址</label></td>
+                <td class="layui-input-block">
+                    <select lay-verify="required">
+                        <option value="0">请选择</option>
+                        <option value="1">北京</option>
+                    </select>
+                    <select lay-verify="required">
+                        <option value="0">请选择</option>
+                        <option value="1">北京市</option>
+                    </select>
+                    <select  lay-verify="required">
+                        <option value="0">请选择</option>
+                        <option value="1">海淀区</option>
+                    </select>
+                </td>
+                <td><label class="layui-form-label">详细地址</label></td>
+                <td class="layui-input-block"><input class="layui-input" type="text" name="title" placeholder="如道路 门牌号 小区 楼栋号 单元室等"></td>
+            </tr>
+            <tr class="layui-form-item">
+                <td><label class="layui-form-label">邮政编码</label></td>
+                <td class="layui-input-block"><input class="layui-input" type="text" name="title" ></td>
+                <td><label class="layui-form-label">联系人</label></td>
+                <td class="layui-input-block"><input  class="layui-input" type="text" name="title" ></td>
+            </tr>
+            <tr class="layui-form-item">
+                <td><label class="layui-form-label">联系电话</label></td>
+                <td class="layui-input-block"><input placeholder="只能以13、15、18开头" class="layui-input" type="text" name="title" ></td>
+                <td><label class="layui-form-label">邮箱</label></td>
+                <td class="layui-input-block"><input placeholder="8-16位数字+@163.com" class="layui-input" type="text" name="title" ></td>
+            </tr>
+        </table>
+        <div class="modal-footer">
+            <button class="layui-btn layui-btn-normal" style="float: left;margin-left:100px">提交</button>
+            <button class="layui-btn layui-btn-normal" style="float: right;margin-right:100px">取消</button>
+        </div>
+    </form>
 </div>
 </body>
 </html>
